# foresight

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
foresight/: cli.py  collector.py  forecaster.py  storage.py
foresight_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
